@@ -1877,7 +1877,7 @@ possible to send only text messages and not HTML formated messages
 This is approximately what your \Email{} will look like:
 
 % screenshot: Outlook composer fenster mit openpgp zertifikat.
-\IncludeImage[width=0.85\textwidth]{sc-ol-adele-sendOpenpgpKey-inline_de}
+\IncludeImage[width=0.85\textwidth]{sc-ol-adele-sendOpenpgpKey-inline_en}
 
 Now send the \Email{} to Adele. Make sure to include your  
 \textit{own} \Email{} address as the sender. Otherwise you will never receive Adele's response ...
@@ -1908,7 +1908,7 @@ Your finished \Email{} should look something like this:
 \T\enlargethispage{2\baselineskip}
 
 % screenshot: Outlook composer fenster mit openpgp zertifikat im Anhang
-\IncludeImage[width=0.85\textwidth]{sc-ol-adele-sendOpenpgpKey-attachment_de}
+\IncludeImage[width=0.85\textwidth]{sc-ol-adele-sendOpenpgpKey-attachment_en}
 
 Now send the \Email{} and attachment to Adele.
 
@@ -2637,7 +2637,7 @@ signature pen or the menu item \Menu{Format$\rightarrow$Sign message}.
 Your \Email{} window would then look something like this:
 
 % screenshot: OL composer with Adele's address and body text
-\IncludeImage[width=0.85\textwidth]{sc-ol-sendSignedMail_de}
+\IncludeImage[width=0.85\textwidth]{sc-ol-sendSignedMail_en}
 
 Now click on \Button{Send}.
 
@@ -5448,7 +5448,7 @@ area). However, if you still want to use HTML for signed or encrypted
 by the time the message reaches the recipient. 
 
 % screenshot: Outlook text format options
-\IncludeImage[width=0.6\textwidth]{sc-gpgol-options-textformat_de}
+\IncludeImage[width=0.6\textwidth]{sc-gpgol-options-textformat_en}
 
 \textbf{Please note:}
 The program extension GpgOL from Gpg4win makes it possible to handle
